prevent overflow & filetree bug fix (max 100?)

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,17 @@ body {
   outline: 0;
 }
 
+::-webkit-scrollbar {
+  width: 3.5px;
+}
+::-webkit-scrollbar-track {
+  background-color: none;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--panelPathColor);
+  border-radius: 5px;
+}
+
 #root {
   position: absolute;
   width: 100vw;
